modify jenkins+maven